--- a/.prettierrc
+++ b/.prettierrc
@@ -4,6 +4,5 @@
   "singleQuote": true,
   "printWidth": 80,
   "bracketSpacing": true,
-  "semicolon": true,
-  "jsxBracketSameLine": false
+  "bracketSameLine": false
 }
